# shipghost

./: .gitignore  README.md  SECURITY.md  SPONSOR_DEFENSE.md  app.json  manifest.json  package.json
.anna/: app.json  dev-app.json  executas.lock.json
.github/workflows/: ci.yml  release-binaries.yml
bundle/: anna-tool-ids.js  app.js  index.html  styles.css
data/fixtures/: git_seed.jsonl
docs/: AUDIT_REPORT.md  friction-log.md
executas/shipghost/: executa.json  package_binary.sh  plugin.py  pyproject.toml
executas/shipghost/.anna/: executa.json
fixtures/: seed.jsonl
public/: pitch.html
scripts/: bench.py  record-shipghost.mjs  screenshot-shipghost.mjs  verify_offline.py
tests/: test_plugin.py
