[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tool-dev-shipghost"
version = "1.2.0"
description = "ShipGhost Executa Plugin for local Git repository PR analysis"
requires-python = ">=3.10"
dependencies = [
    "pycryptodome>=3.19.0"
]

[project.scripts]
tool-dev-shipghost = "plugin:main"

[tool.hatch.build.targets.wheel]
only-include = ["plugin.py"]
