[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tool-edycutjong-shipghost-ust65m3h"
version = "1.2.0"
description = "ShipGhost Executa Plugin for local Git repository PR analysis"
requires-python = ">=3.10"
dependencies = [
    "pycryptodome>=3.19.0"
]

[project.scripts]
tool-edycutjong-shipghost-ust65m3h = "plugin:main"

[tool.hatch.build.targets.wheel]
only-include = ["plugin.py"]
